# mutato

./: .gitignore  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
docs/: api.md  architecture.md  cli.md  index.md  mda-precompute.md
mutato/: __init__.py  api.py  cli.py
mutato/core/: __init__.py  enforcer.py  env_io.py  file_io.py  stopwatch.py  text_utils.py
mutato/finder/: __init__.py
mutato/mda/: __init__.py  mda_generator.py  owl_schema.py  owl_schema_detector.py  universal_mda_generator.py
mutato/mda/extractors/: __init__.py  mixed_ask_owl_api.py
mutato/parser/: __init__.py
mutato/parser/bp/: mutato_api.py
mutato/parser/dmo/: __init__.py  exact_match_finder.py  exact_match_swapper.py  hierarchy_match_finder.py  hierarchy_match_swapper.py  spacy_match_finder.py  spacy_match_swapper.py  span_match_finder.py  span_match_swapper.py  swap_result_summarizer.py
mutato/parser/dto/: __init__.py  candidate_synonym_blacklist_kb.py
mutato/parser/svc/: __init__.py  augment_token_hierarchy.py  perform_exact_matching.py  perform_hierarchy_matching.py  perform_spacy_matching.py  perform_span_matching.py
resources/scripts/: download-spacy-model.sh
tests/owl/: test_ask_json_api.py  test_ask_owl_api.py
tests/owl/api/: test_ontology_parser_from_dict.py  test_ontology_parser_from_owl.py
tests/owl/finder/: test_animals_finder_hierarchy.py  test_animals_finder_synonyms.py  test_colors_finder_hierarchy.py  test_find_ontology_data_api.py  test_find_ontology_data_exact_match.py  test_find_ontology_json_canon_ops.py  test_find_ontology_json_from_file.py  test_find_ontology_json_hierarchy.py  test_find_ontology_json_hierarchy_ops.py  test_find_ontology_json_structure.py  test_generate_plus_spans_complex.py  test_generate_plus_spans_overlap.py  test_generate_plus_spans_single.py  test_geography_finder.py  test_mda_generator_courses.py  test_mda_generator_hierarchy_consistency.py  test_mda_generator_medicopilot.py  test_mda_generator_output_schema.py  test_mda_generator_synonym_consistency.py  test_music_finder_hierarchy.py
tests/owl/mda/: test_animals_mda_schema.py  test_music_mda_schema.py
tests/owl/parser/: test_animals_parser_basic.py  test_animals_parser_spans.py  test_ask_owl_api_equivalents.py  test_colors_parser_basic.py  test_econ_skills_basic.py  test_econ_skills_sentences.py  test_econ_skills_spans.py  (+19 more)
(+68 files in other folders)
